fix arrow and add icon email

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         <img class="profile-img" src="./img-profile.png" />
         <p class="profile-name">Shidqi Rifat Pangestu</p>
         <p class="profile-title">Front-End Web Dev</p>
-        <i class="fas fa-arrow-right arrow"></i>
+        <div class="arrow">
+          <i class="fas fa-arrow-right"></i>
+        </div>
       </div>
       <div class="skills-container">
         <p class="skill-title">Skills</p>
@@ -33,6 +35,9 @@
           ></a>
           <a target="_blank" href="https://www.instagram.com/shidqirifat19/"
             ><i class="fab fa-instagram"></i
+          ></a>
+          <a href="mailto: rifatpangestu.com"
+            ><i class="fas fa-envelope"></i
           ></a>
         </div>
         <i class="fas fa-times close"></i>
