resize container, font-size, and change the picture

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
       <div class="profile-container">
-        <img class="profile-img" src="./img-profile.png" />
+        <img class="profile-img" src="./shidqi.png" />
         <p class="profile-name">Shidqi Rifat Pangestu</p>
         <p class="profile-title">Front-End Web Dev</p>
         <div class="arrow">
@@ -36,7 +36,7 @@
           <a target="_blank" href="https://www.instagram.com/shidqirifat19/"
             ><i class="fab fa-instagram"></i
           ></a>
-          <a href="mailto: rifatpangestu.com"
+          <a href="mailto: rifatpangestu87@gmail.com"
             ><i class="fas fa-envelope"></i
           ></a>
         </div>
